--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Updates Site</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -14,6 +15,26 @@
 
        </div>
 
+
+       <div class="icon-bar">
+        <a href="http://t.me/CricNewsUpdatebot" target="_blank" aria-label="Telegram" rel="noopener noreferrer">
+          <i class="fa fa-telegram"></i>
+          CricNews Telegram Bot
+        </a>
+        <a href="https://www.linkedin.com/in/aashirwadkumar159/" target="_blank" aria-label="Linkedin" rel="noopener noreferrer">
+          <i class="fa fa-linkedin"></i>
+          LinkedIn
+        </a>
+        <a href="https://twitter.com/aashirwad_01" target="_blank" aria-label="Twitter" rel="noopener noreferrer">
+          <i class="fa fa-twitter"></i>
+          Twitter
+        </a>
+        <a href="https://github.com/aashirwad01" target="_blank" aria-label="Github" rel="noopener noreferrer">
+          <i class="fa fa-github"></i>
+          Github
+        </a>
+      </div>
+  
    </div>
 
     <script type ="module" src="message.js"></script>
